--- a/workflows/rss.yml
+++ b/workflows/rss.yml
@@ -30,6 +30,6 @@ jobs:
           method: 'POST'
           accept: 200,201,204
           content-type: application/x-www-form-urlencoded
-          data: 'status=${{on.rss.outputs.title}} 👉🏻${{on.rss.outputs.link}}'
+          data: 'visibility=unlisted&status=${{on.rss.outputs.title}} 👉🏻${{on.rss.outputs.link}}'
           timeout: 10000
           is_debug: false
